--- a/src/components/CategoriesContainer.scss
+++ b/src/components/CategoriesContainer.scss
@@ -9,9 +9,8 @@
 /* CATEGORIES */
 
 .categories-container {
-  column-width: 250px;
+  column-width: 300px;
   column-gap: 40px;
-  text-align: left;
   margin: 10px;
 }
 
